# audio-checker

./: Cargo.toml  tmp_analyze.py
docs/: implementation-plan.md
src/: align.rs  analyze.rs  detector.rs  error.rs  latency.rs  lib.rs  main.rs  output.rs  preprocess.rs  timestamp.rs  timing.rs  wav.rs
tests/: integration_tests.rs
