[package]
name = "audio-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
hound = "3.5"
lexopt = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
sha2 = "0.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
